# three-body-fan-game

./: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: index.html  index.js  index.ts
wasm-three-body/: Cargo.toml
wasm-three-body/src/: four_body.rs  lib.rs
