[package]
name = "wasm-three-body"
version = "0.1.0"
authors = ["lunafutures@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.69"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s" # Tell `rustc` to optimize for small code size.